--- a/site/templates/installation_contact.xml
+++ b/site/templates/installation_contact.xml
@@ -18,13 +18,14 @@
 			<!-- Header -->
 			<cms:template file="parts/header.xml"/>
 
-			<section id="contact">
+			<div id="user-installation">
+				<h2><cms:text constant="title_user_installation"/></h2>
 				<cms:module
 					name="contact_form"
 					action="show"
-					text_id="installation"
-				/>
-			</section>
+					text_id="service_installation"
+					/>
+			</div>
 
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
