Style: Updated div#user-service textarea field

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -891,6 +891,12 @@ div#user-service form textarea {
 	height: 30px;
 }
 
+div#user-service form textarea {
+	vertical-align: top;
+	height: auto;
+	resize: vertical;
+}
+
 div#user-installation form input,
 div#user-service form input {
 	padding: 5px;
