--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -84,6 +84,7 @@ nav#main > ul > li > a:hover {
 nav#main > ul > li > a.control_panel,
 nav#main > ul > li > a.logout,
 nav#main > ul > li > a.sign-up,
+nav#main > ul > li > a.language,
 nav#main > ul > li > a.login {
 	color: @color_special;
 }
@@ -91,6 +92,7 @@ nav#main > ul > li > a.login {
 nav#main > ul > li > a.control_panel:hover,
 nav#main > ul > li > a.logout:hover,
 nav#main > ul > li > a.sign-up:hover,
+nav#main > ul > li > a.language:hover,
 nav#main > ul > li > a.login:hover {
 	background-color: @color_special;
 	color: @color_ac_text;
@@ -99,11 +101,13 @@ nav#main > ul > li > a.login:hover {
 nav#main > ul > li > a.control_panel svg,
 nav#main > ul > li > a.logout svg,
 nav#main > ul > li > a.sign-up svg,
+nav#main > ul > li > a.language svg,
 nav#main > ul > li > a.login svg {
 	display: inline-block;
 	width: 1.5em;
 	height: 1.5em;
 	vertical-align: middle;
+	margin-top: -3px;
 	margin-left: 5px;
 	fill: @color_special;
 	transition: all 0.3s;
@@ -112,10 +116,10 @@ nav#main > ul > li > a.login svg {
 nav#main > ul > li > a.control_panel:hover  svg,
 nav#main > ul > li > a.logout:hover svg,
 nav#main > ul > li > a.sign-up:hover svg,
+nav#main > ul > li > a.language:hover svg,
 nav#main > ul > li > a.login:hover svg {
 	fill: white;
 }
-
 
 nav#main ul li > ul {
 	position: absolute;
@@ -169,6 +173,19 @@ nav#main ul ul li a {
 nav#main ul ul li:hover a {
 	background-color: @color_header;
 	color: @color_ac_text ;
+}
+
+/**
+ * Language menu
+ */
+nav#main ul li.language a {
+	visibility: hidden;
+	opacity: 0;
+}
+
+nav#main ul li.language a.active {
+	visibility: visible;
+	opacity: 1;
 }
 
 header > a.phone {
