Cookie warning: Updated cookie warning message to be displayed if first time user entered the site

--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -99,7 +99,7 @@ footer div.copyright a {
  * tracking message
  */
 
-div#tracking_message {
+div#cookie-warning {
 	position: fixed;
 	z-index: 100000;
 	bottom: 0px;
@@ -116,17 +116,17 @@ div#tracking_message {
 	transition: all 0.3s;
 }
 
-div#tracking_message.show {
+div#cookie-warning.visible {
 	opacity: 1;
 	visibility: visible;
 }
 
-div#tracking_message a {
+div#cookie-warning a {
 	color: white;
 	margin-left: 10px;
 	margin-right: 10px;
 }
 
-div#tracking_message a:hover {
+div#cookie-warning a:hover {
 	text-decoration: none;
 }
