Packages list: Added packages list to mobile version

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -388,7 +388,7 @@ section#package_list div.package.business {
 	background-color: @color_ac_red;
 }
 
-section#package_list div.package.industrial {
+section#package_list div.package.industry {
 	background-color: @color_ac_orange;
 }
 
